fix collapse

--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -121,18 +121,19 @@
 
 .fill {
   //   max-width: 400px;
-<<<<<<< HEAD
-  height: 640px;
 
-=======
-  //height: 668px;
->>>>>>> playing-with-js
   //   margin: 457px 0 0;
   //   padding: 27px 19px 30px 20px;
   //   padding: 1rem;
-  display: flex;
-  flex-flow: column wrap;
-  gap: 20px;
+  //display: flex;
+  //flex-flow: column wrap;
+  // gap: 20px;
+
+  &__wrapper {
+    display: flex;
+    flex-flow: column wrap;
+    gap: 20px;
+  }
 
   &__text {
     font-size: 14px;
